# Rust_PackedFilter

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: bit_hacks.rs  implementation_naive.rs  implementation_packed_c.c  implementation_packed_c.rs  implementation_template.txt  main.rs  packed_contains.rs  tests.rs
