[package]
name = "rust_packed_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
lto = true
codegen-units = 1
panic = 'abort'